# pythonCryptoAnalysis

./: .gitignore  BACKTESTING_AND_SIMULATION_PLAN.md  CLAUDE.md  README.md  USAGE_GUIDE.md  analyze_results.py  btc_macd_divergence.py  example_usage.py  main.py  paper_trading.py  pyproject.toml  requirements.txt  requirements_chart.txt  run.py  run_backtest.py  test.py  test_backtest.py  test_improvements.py  test_kdj_standalone.py  test_paper_trading.py
config/: .gitignore  requirements.txt
docs/: README.md  project_structure.md
src/: __init__.py
src/analysis/: __init__.py  advanced_divergence_analysis.py  divergence.py  divergence_analysis.py  macd_kdj_divergence.py  multi_timeframe_analysis.py  pattern_detector.py  peak_trough_finder.py
src/backtest/: __init__.py  backtest.py  engine.py  mtf_divergence_strategy.py  performance.py  portfolio.py  run_mtf_strategy.py
src/data_collection/: __init__.py  downData.py
src/indicators/: __init__.py  base.py  kdj.py  macd.py
src/strategies/: README.md  __init__.py  ai_enhanced.py  backtest_engine.py  backtest_with_backtrader.py  base_strategy.py  config.py  divergence_analyzer.py  main_strategy.py  mtf_divergence_strategy.py  onchain_indicators.py  optimized_backtrader_strategy.py  real_time_signal_monitor.py  risk_management.py  technical_indicators.py
src/strategies/technical_indicators/: dataProcessor.py  divergence_analyzer.py  index.py  unified_logger.py  visualize_decisions.py
src/visualization/: __init__.py  candlestick_chart.py
