[project]
name = "pythoncryptoanalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "backtrader==1.9.78.123",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.58.1",
    "idna==3.10",
    "kaleido==0.2.1",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.3",
    "mplfinance>=0.12.10b0",
    "narwhals==1.41.0",
    "numba>=0.61.2",
    "numpy==2.2.6",
    "packaging==25.0",
    "pandas==2.3.0",
    "pillow==11.2.1",
    "plotly==6.1.2",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.3",
    "six==1.17.0",
    "ta>=0.11.0",
    "tqdm==4.67.1",
    "tzdata==2025.2",
    "urllib3==2.4.0",
]
